more RAM for tomcat